fix: TrainingCourseFormController